[gd_scene load_steps=13 format=3 uid="uid://dls7baoq1g7em"]

[ext_resource type="Script" path="res://screens/world.gd" id="1_qxali"]
[ext_resource type="Texture2D" uid="uid://bijuky6sja7uj" path="res://art/TempleTakeSpriteSheet.png" id="2_hhex5"]
[ext_resource type="PackedScene" uid="uid://idou511dgvi1" path="res://player.tscn" id="3_sqmxc"]
[ext_resource type="PackedScene" uid="uid://cdi4j4m6lgddv" path="res://spawners/arrow_spawner.tscn" id="4_yghjq"]
[ext_resource type="PackedScene" uid="uid://bnftbcsf7afjt" path="res://spawners/tiger_spawner.tscn" id="5_sn32y"]
[ext_resource type="PackedScene" uid="uid://b3a6xs823lcot" path="res://spawners/turtles_spawner.tscn" id="6_306td"]
[ext_resource type="PackedScene" uid="uid://c1x3d7rgecklb" path="res://spawners/alligator_spawner.tscn" id="6_f0ye2"]
[ext_resource type="PackedScene" uid="uid://w4vwmdpwbr4r" path="res://items/chest.tscn" id="8_rp243"]
[ext_resource type="Texture2D" uid="uid://yt4ci4oreu04" path="res://art/gem.png" id="9_fu3vc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cte8d"]
texture = ExtResource("2_hhex5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
2:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0

[sub_resource type="TileSet" id="TileSet_qsnxn"]
sources/0 = SubResource("TileSetAtlasSource_cte8d")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26pbq"]
size = Vector2(384, 288)

[node name="World" type="Node2D" groups=["world"]]
script = ExtResource("1_qxali")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_qsnxn")
format = 2
layer_0/tile_data = PackedInt32Array(1376256, 0, 0, 1376257, 0, 0, 1376258, 65536, 0, 1376259, 0, 0, 1376260, 65536, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 65536, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 65536, 0, 1376269, 0, 0, 1376270, 65536, 0, 1376271, 0, 0, 1376272, 65536, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 65536, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 65536, 0, 1376279, 0, 0, 0, 0, 0, 65536, 0, 0, 65537, 0, 3, 65538, 0, 3, 65539, 0, 0, 65540, 0, 0, 65541, 0, 3, 65542, 0, 3, 65543, 0, 0, 65544, 0, 0, 65545, 0, 3, 65546, 0, 3, 65547, 0, 0, 65548, 0, 0, 65549, 0, 3, 65550, 0, 3, 65551, 0, 0, 65552, 0, 0, 65553, 0, 3, 65554, 0, 3, 65555, 0, 0, 65556, 0, 0, 65557, 0, 3, 65558, 0, 3, 65559, 0, 0, 23, 0, 0, 22, 0, 0, 21, 0, 0, 20, 65536, 0, 19, 0, 0, 18, 0, 0, 17, 65536, 0, 16, 0, 0, 15, 0, 0, 14, 65536, 0, 13, 0, 0, 12, 0, 0, 11, 0, 0, 10, 0, 0, 9, 65536, 0, 8, 0, 0, 7, 0, 0, 6, 65536, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 65536, 0, 1441792, 0, 3, 1441793, 0, 3, 1441794, 0, 3, 1441795, 0, 3, 1441796, 0, 3, 1441797, 0, 3, 1441798, 0, 3, 1441799, 0, 3, 1441800, 0, 3, 1441801, 0, 3, 1441802, 0, 3, 1441803, 0, 3, 1441804, 0, 3, 1441805, 0, 3, 1441806, 0, 3, 1441807, 0, 3, 1441808, 0, 3, 1441809, 0, 3, 1441810, 0, 3, 1441811, 0, 3, 1441812, 0, 3, 1441813, 0, 3, 1441814, 0, 3, 1441815, 0, 3, 2752512, 65536, 0, 2752513, 0, 0, 2752514, 0, 0, 2752515, 65536, 0, 2752516, 0, 0, 2752517, 0, 0, 2752518, 65536, 0, 2752519, 0, 0, 2752520, 0, 0, 2752521, 0, 0, 2752522, 0, 0, 2752523, 0, 0, 2752524, 0, 0, 2752525, 65536, 0, 2752526, 0, 0, 2752527, 0, 0, 2752528, 0, 0, 2752529, 0, 0, 2752530, 0, 0, 2752531, 65536, 0, 2752532, 0, 0, 2752533, 0, 0, 2752534, 65536, 0, 2752535, 0, 0, 2686976, 0, 0, 2686977, 65536, 0, 2686978, 0, 0, 2686979, 0, 0, 2686980, 65536, 0, 2686981, 0, 0, 2686982, 65536, 0, 2686983, 0, 0, 2686984, 65536, 0, 2686985, 0, 0, 2686986, 65536, 0, 2686987, 0, 0, 2686988, 0, 0, 2686989, 0, 0, 2686990, 65536, 0, 2686991, 0, 0, 2686992, 0, 0, 2686993, 65536, 0, 2686994, 0, 0, 2686995, 65536, 0, 2686996, 0, 0, 2686997, 65536, 0, 2686998, 0, 0, 2686999, 0, 0, 131072, 131072, 3, 131075, 131072, 4, 131076, 131072, 3, 131079, 131072, 4, 131083, 131072, 4, 131087, 131072, 4, 131091, 131072, 4, 131095, 131072, 4, 131080, 131072, 3, 131084, 131072, 3, 131088, 131072, 3, 131092, 131072, 3, 1310720, 131072, 0, 1310721, 131072, 0, 1310722, 131072, 0, 1310723, 131072, 0, 1310724, 131072, 0, 1310725, 131072, 0, 1310726, 131072, 0, 1310727, 131072, 0, 1310728, 131072, 0, 1310729, 131072, 0, 1310730, 131072, 0, 1310731, 131072, 0, 1310732, 131072, 0, 1310733, 131072, 0, 1310734, 131072, 0, 1310735, 131072, 0, 1310736, 131072, 0, 1310737, 131072, 0, 1310738, 131072, 0, 1310739, 131072, 0, 1310740, 131072, 0, 1310741, 131072, 0, 1310742, 131072, 0, 1310743, 131072, 0, 1245207, 327680, 0, 1179671, 327680, 0, 1114135, 327680, 0, 1048599, 327680, 0, 983063, 327680, 0, 917527, 327680, 0, 851991, 327680, 0, 786455, 327680, 0, 720919, 327680, 0, 655383, 327680, 0, 589847, 327680, 0, 524311, 327680, 0, 458775, 327680, 0, 393239, 327680, 0, 327703, 327680, 0, 262167, 327680, 0, 196631, 327680, 0, 1245184, 327680, 0, 1179648, 327680, 0, 1114112, 327680, 0, 1048576, 327680, 0, 983040, 327680, 0, 917504, 327680, 0, 851968, 327680, 0, 786432, 327680, 0, 720896, 327680, 0, 655360, 327680, 0, 589824, 327680, 0, 524288, 327680, 0, 458752, 327680, 0, 393216, 327680, 0, 327680, 327680, 0, 262144, 327680, 0, 196608, 327680, 0, 589831, 327680, 0, 524295, 327680, 0, 458759, 327680, 0, 393223, 327680, 0, 327687, 327680, 0, 262151, 327680, 0, 196615, 327680, 0, 196614, 327680, 0, 131078, 327680, 0, 131077, 327680, 0, 196613, 327680, 0, 196612, 327680, 0, 196611, 327680, 0, 196610, 327680, 0, 131074, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 327681, 327680, 0, 393217, 327680, 0, 458753, 327680, 0, 524289, 327680, 0, 589825, 327680, 0, 655361, 327680, 0, 720897, 327680, 0, 786433, 327680, 0, 851969, 327680, 0, 917505, 327680, 0, 983041, 327680, 0, 1048577, 327680, 0, 1114113, 327680, 0, 1179649, 327680, 0, 1245185, 327680, 0, 1245186, 327680, 0, 1179650, 327680, 0, 1114114, 327680, 0, 1048578, 327680, 0, 983042, 327680, 0, 917506, 327680, 0, 851970, 327680, 0, 786434, 327680, 0, 720898, 327680, 0, 655362, 327680, 0, 589826, 196608, 0, 524290, 327680, 0, 458754, 327680, 0, 393218, 327680, 0, 327682, 327680, 0, 262146, 327680, 0, 262147, 327680, 0, 327683, 327680, 0, 393219, 327680, 0, 458755, 327680, 0, 524291, 327680, 0, 589827, 327680, 0, 655363, 327680, 0, 720899, 327680, 0, 786435, 327680, 0, 851971, 327680, 0, 917507, 196608, 0, 983043, 327680, 0, 1048579, 327680, 0, 1114115, 327680, 0, 1179651, 196608, 0, 1245187, 327680, 0, 1245188, 327680, 0, 1179652, 327680, 0, 1114116, 327680, 0, 1048580, 327680, 0, 983044, 327680, 0, 917508, 327680, 0, 851972, 327680, 0, 786436, 327680, 0, 720900, 327680, 0, 655364, 327680, 0, 589828, 327680, 0, 524292, 327680, 0, 458756, 327680, 0, 393220, 327680, 0, 327684, 327680, 0, 262148, 327680, 0, 262149, 327680, 0, 327685, 327680, 0, 393221, 327680, 0, 458757, 327680, 0, 524293, 327680, 0, 589829, 327680, 0, 655365, 327680, 0, 720901, 327680, 0, 786437, 327680, 0, 851973, 327680, 0, 917509, 327680, 0, 983045, 327680, 0, 1048581, 327680, 0, 1114117, 327680, 0, 1179653, 327680, 0, 1245189, 327680, 0, 1245190, 327680, 0, 1179654, 327680, 0, 1114118, 327680, 0, 1048582, 327680, 0, 983046, 327680, 0, 917510, 327680, 0, 851974, 327680, 0, 786438, 327680, 0, 720902, 327680, 0, 655366, 327680, 0, 589830, 327680, 0, 524294, 327680, 0, 458758, 327680, 0, 393222, 327680, 0, 327686, 196608, 0, 262150, 327680, 0, 655367, 327680, 0, 720903, 327680, 0, 786439, 196608, 0, 851975, 327680, 0, 917511, 327680, 0, 983047, 327680, 0, 1048583, 327680, 0, 1114119, 327680, 0, 1179655, 327680, 0, 1245191, 327680, 0, 1245192, 327680, 0, 1179656, 196608, 0, 1114120, 327680, 0, 1048584, 327680, 0, 983048, 327680, 0, 917512, 327680, 0, 851976, 327680, 0, 786440, 327680, 0, 720904, 327680, 0, 655368, 327680, 0, 589832, 327680, 0, 524296, 196608, 0, 458760, 327680, 0, 393224, 327680, 0, 327688, 327680, 0, 262152, 327680, 0, 196616, 327680, 0, 196617, 327680, 0, 131081, 327680, 0, 131082, 327680, 0, 196618, 327680, 0, 262154, 327680, 0, 262153, 327680, 0, 327689, 327680, 0, 393225, 327680, 0, 458761, 327680, 0, 524297, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, 720905, 327680, 0, 786441, 327680, 0, 851977, 327680, 0, 917513, 327680, 0, 983049, 327680, 0, 1048585, 327680, 0, 1114121, 327680, 0, 1179657, 327680, 0, 1245193, 327680, 0, 1245194, 327680, 0, 1179658, 327680, 0, 1114122, 327680, 0, 1048586, 327680, 0, 983050, 196608, 0, 917514, 327680, 0, 851978, 327680, 0, 786442, 327680, 0, 720906, 327680, 0, 655370, 327680, 0, 589834, 327680, 0, 524298, 327680, 0, 458762, 327680, 0, 393226, 327680, 0, 327690, 327680, 0, 327691, 327680, 0, 262155, 327680, 0, 196619, 327680, 0, 196620, 327680, 0, 262156, 327680, 0, 327692, 196608, 0, 393228, 327680, 0, 393227, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, 589835, 196608, 0, 655371, 327680, 0, 720907, 327680, 0, 786443, 327680, 0, 851979, 327680, 0, 917515, 327680, 0, 983051, 327680, 0, 1048587, 327680, 0, 1114123, 327680, 0, 1179659, 327680, 0, 1245195, 327680, 0, 1245196, 327680, 0, 1179660, 327680, 0, 1114124, 327680, 0, 1048588, 327680, 0, 983052, 327680, 0, 917516, 327680, 0, 851980, 327680, 0, 786444, 327680, 0, 720908, 327680, 0, 655372, 327680, 0, 589836, 327680, 0, 524300, 327680, 0, 458764, 327680, 0, 458765, 327680, 0, 393229, 327680, 0, 327693, 327680, 0, 262157, 327680, 0, 196621, 327680, 0, 131085, 327680, 0, 131086, 327680, 0, 196622, 327680, 0, 262158, 327680, 0, 327694, 327680, 0, 393230, 327680, 0, 458766, 327680, 0, 524302, 327680, 0, 524301, 327680, 0, 589837, 327680, 0, 655373, 327680, 0, 720909, 327680, 0, 786445, 327680, 0, 851981, 327680, 0, 917517, 327680, 0, 983053, 327680, 0, 1048589, 327680, 0, 1114125, 327680, 0, 1179661, 327680, 0, 1245197, 327680, 0, 1245198, 327680, 0, 1179662, 327680, 0, 1114126, 327680, 0, 1048590, 327680, 0, 983054, 327680, 0, 917518, 327680, 0, 851982, 196608, 0, 786446, 327680, 0, 720910, 327680, 0, 655374, 327680, 0, 589838, 327680, 0, 589839, 327680, 0, 524303, 196608, 0, 458767, 327680, 0, 393231, 327680, 0, 327695, 327680, 0, 262159, 327680, 0, 196623, 327680, 0, 196624, 327680, 0, 262160, 327680, 0, 327696, 327680, 0, 393232, 327680, 0, 458768, 327680, 0, 524304, 327680, 0, 589840, 327680, 0, 655376, 327680, 0, 655375, 327680, 0, 720911, 327680, 0, 786447, 327680, 0, 851983, 327680, 0, 917519, 327680, 0, 983055, 327680, 0, 1048591, 327680, 0, 1114127, 327680, 0, 1179663, 327680, 0, 1245199, 327680, 0, 1245200, 327680, 0, 1179664, 327680, 0, 1114128, 327680, 0, 1048592, 327680, 0, 983056, 327680, 0, 917520, 327680, 0, 851984, 327680, 0, 786448, 327680, 0, 720912, 196608, 0, 720913, 327680, 0, 655377, 327680, 0, 589841, 327680, 0, 524305, 327680, 0, 458769, 327680, 0, 393233, 327680, 0, 327697, 327680, 0, 262161, 327680, 0, 196625, 327680, 0, 131089, 327680, 0, 131090, 327680, 0, 196626, 327680, 0, 262162, 327680, 0, 327698, 196608, 0, 393234, 327680, 0, 458770, 327680, 0, 524306, 327680, 0, 589842, 327680, 0, 655378, 327680, 0, 720914, 327680, 0, 786450, 327680, 0, 786449, 327680, 0, 851985, 327680, 0, 917521, 327680, 0, 983057, 327680, 0, 1048593, 327680, 0, 1114129, 327680, 0, 1179665, 327680, 0, 1245201, 196608, 0, 1245202, 327680, 0, 1179666, 327680, 0, 1114130, 327680, 0, 1048594, 327680, 0, 983058, 327680, 0, 917522, 327680, 0, 851986, 327680, 0, 851987, 327680, 0, 786451, 327680, 0, 720915, 327680, 0, 655379, 327680, 0, 589843, 327680, 0, 524307, 327680, 0, 458771, 327680, 0, 393235, 327680, 0, 327699, 327680, 0, 262163, 327680, 0, 196627, 327680, 0, 196628, 327680, 0, 262164, 327680, 0, 327700, 327680, 0, 393236, 327680, 0, 458772, 327680, 0, 524308, 327680, 0, 589844, 327680, 0, 655380, 196608, 0, 720916, 327680, 0, 786452, 327680, 0, 851988, 327680, 0, 917524, 327680, 0, 917523, 327680, 0, 983059, 327680, 0, 1048595, 327680, 0, 1114131, 327680, 0, 1179667, 327680, 0, 1245203, 327680, 0, 1245204, 327680, 0, 1179668, 327680, 0, 1114132, 327680, 0, 1048596, 327680, 0, 983060, 327680, 0, 983061, 196608, 0, 917525, 327680, 0, 851989, 327680, 0, 786453, 327680, 0, 720917, 327680, 0, 655381, 327680, 0, 589845, 327680, 0, 524309, 327680, 0, 458773, 327680, 0, 393237, 327680, 0, 327701, 327680, 0, 262165, 327680, 0, 196629, 327680, 0, 131093, 327680, 0, 131094, 327680, 0, 196630, 327680, 0, 262166, 327680, 0, 327702, 327680, 0, 393238, 327680, 0, 458774, 327680, 0, 524310, 327680, 0, 589846, 327680, 0, 655382, 327680, 0, 720918, 327680, 0, 786454, 327680, 0, 851990, 327680, 0, 917526, 327680, 0, 983062, 327680, 0, 1048598, 327680, 0, 1048597, 327680, 0, 1114133, 327680, 0, 1179669, 327680, 0, 1245205, 327680, 0, 1245206, 327680, 0, 1179670, 327680, 0, 1114134, 327680, 0, 1507328, 0, 5, 1572864, 0, 5, 1638400, 0, 5, 1703936, 0, 5, 1769472, 0, 5, 1835008, 0, 5, 1900544, 0, 5, 1966080, 0, 5, 2031616, 0, 5, 2097152, 0, 5, 2162688, 0, 5, 2228224, 0, 5, 2293760, 0, 5, 2359296, 0, 5, 2424832, 0, 5, 2490368, 0, 5, 2555904, 0, 5, 2621440, 131072, 0, 1507351, 0, 5, 1572887, 0, 5, 1638423, 0, 5, 1703959, 0, 5, 1769495, 0, 5, 1835031, 0, 5, 1900567, 0, 5, 1966103, 0, 5, 2031639, 0, 5, 2097175, 0, 5, 2359319, 0, 5, 2424855, 0, 5, 2490391, 0, 5, 2555927, 0, 5, 2621463, 131072, 0, 2293783, 0, 5, 2228247, 0, 5, 2162711, 0, 5, 1900555, 0, 5, 1835019, 0, 5, 1769483, 0, 5, 1703947, 0, 5, 1638411, 0, 5, 1572875, 0, 5, 1507339, 0, 5, 1507338, 0, 5, 1507337, 0, 5, 1507336, 0, 5, 1507335, 0, 5, 1507334, 0, 5, 1507333, 0, 5, 1507332, 0, 5, 1507331, 0, 5, 1507330, 0, 5, 1507329, 0, 5, 1572865, 0, 5, 1638401, 0, 5, 1703937, 0, 5, 1769473, 0, 5, 1835009, 0, 5, 1900545, 0, 5, 1966081, 0, 5, 2031617, 65536, 5, 2097153, 0, 5, 2162689, 0, 5, 2228225, 0, 5, 2293761, 0, 5, 2359297, 0, 5, 2424833, 0, 5, 2490369, 0, 5, 2555905, 0, 5, 2621441, 131072, 0, 2621442, 131072, 0, 2555906, 0, 5, 2490370, 0, 5, 2424834, 0, 5, 2359298, 65536, 5, 2293762, 65536, 5, 2228226, 0, 5, 2162690, 0, 5, 2097154, 0, 5, 2031618, 0, 5, 1966082, 0, 5, 1900546, 0, 5, 1835010, 65536, 5, 1769474, 0, 5, 1703938, 0, 5, 1638402, 65536, 5, 1572866, 0, 5, 1572867, 0, 5, 1638403, 0, 5, 1703939, 0, 5, 1769475, 0, 5, 1835011, 0, 5, 1900547, 65536, 5, 1966083, 0, 5, 2031619, 0, 5, 2097155, 0, 5, 2162691, 0, 5, 2228227, 0, 5, 2293763, 0, 5, 2359299, 0, 5, 2424835, 0, 5, 2490371, 0, 5, 2555907, 0, 5, 2621443, 131072, 0, 2621444, 131072, 0, 2555908, 0, 5, 2490372, 0, 5, 2424836, 0, 5, 2359300, 0, 5, 2293764, 0, 5, 2228228, 0, 5, 2162692, 0, 5, 2097156, 0, 5, 2031620, 0, 5, 1966084, 0, 5, 1900548, 0, 5, 1835012, 0, 5, 1769476, 0, 5, 1703940, 0, 5, 1638404, 0, 5, 1572868, 0, 5, 1572869, 0, 5, 1638405, 0, 5, 1703941, 0, 5, 1769477, 0, 5, 1835013, 0, 5, 1900549, 0, 5, 1966085, 0, 5, 2031621, 0, 5, 2097157, 65536, 5, 2162693, 0, 5, 2228229, 0, 5, 2293765, 0, 5, 2359301, 0, 5, 2424837, 0, 5, 2490373, 65536, 5, 2555909, 0, 5, 2621445, 131072, 0, 2621446, 131072, 0, 2555910, 0, 5, 2490374, 0, 5, 2424838, 0, 5, 2359302, 65536, 5, 2293766, 0, 5, 2228230, 0, 5, 2162694, 0, 5, 2097158, 0, 5, 2031622, 0, 5, 1966086, 0, 5, 1900550, 0, 5, 1835014, 0, 5, 1769478, 0, 5, 1703942, 0, 5, 1638406, 0, 5, 1572870, 0, 5, 1572871, 0, 5, 1638407, 0, 5, 1703943, 0, 5, 1769479, 0, 5, 1835015, 65536, 5, 1900551, 0, 5, 1966087, 0, 5, 2031623, 0, 5, 2097159, 0, 5, 2162695, 0, 5, 2228231, 0, 5, 2293767, 0, 5, 2359303, 0, 5, 2424839, 0, 5, 2490375, 0, 5, 2555911, 0, 5, 2621447, 131072, 0, 2621448, 131072, 0, 2555912, 0, 5, 2490376, 0, 5, 2424840, 0, 5, 2359304, 0, 5, 2293768, 0, 5, 2228232, 0, 5, 2162696, 0, 5, 2097160, 0, 5, 2031624, 65536, 5, 1966088, 0, 5, 1900552, 0, 5, 1835016, 0, 5, 1769480, 0, 5, 1703944, 0, 5, 1638408, 0, 5, 1572872, 0, 5, 1572873, 0, 5, 1638409, 65536, 5, 1703945, 0, 5, 1769481, 0, 5, 1835017, 0, 5, 1900553, 0, 5, 1966089, 0, 5, 2031625, 0, 5, 2097161, 0, 5, 2162697, 0, 5, 2228233, 65536, 5, 2293769, 0, 5, 2359305, 0, 5, 2424841, 0, 5, 2490377, 0, 5, 2555913, 0, 5, 2621449, 131072, 0, 2621450, 131072, 0, 2555914, 0, 5, 2490378, 0, 5, 2424842, 65536, 5, 2359306, 0, 5, 2293770, 0, 5, 2228234, 0, 5, 2162698, 0, 5, 2097162, 0, 5, 2031626, 0, 5, 1966090, 0, 5, 1900554, 0, 5, 1835018, 0, 5, 1769482, 0, 5, 1703946, 0, 5, 1638410, 0, 5, 1572874, 0, 5, 1966091, 0, 5, 2031627, 0, 5, 2097163, 65536, 5, 2162699, 0, 5, 2228235, 0, 5, 2293771, 0, 5, 2359307, 0, 5, 2424843, 0, 5, 2490379, 0, 5, 2555915, 0, 5, 2621451, 131072, 0, 2621452, 131072, 0, 2555916, 0, 5, 2490380, 0, 5, 2424844, 0, 5, 2359308, 0, 5, 2293772, 0, 5, 2228236, 0, 5, 2162700, 0, 5, 2097164, 0, 5, 2031628, 0, 5, 1966092, 65536, 5, 1900556, 0, 5, 1835020, 0, 5, 1769484, 0, 5, 1703948, 65536, 5, 1638412, 65536, 5, 1572876, 0, 5, 1507340, 0, 5, 1507341, 0, 5, 1572877, 0, 5, 1638413, 0, 5, 1703949, 0, 5, 1769485, 0, 5, 1835021, 0, 5, 1900557, 0, 5, 1966093, 0, 5, 2031629, 0, 5, 2097165, 0, 5, 2162701, 0, 5, 2228237, 65536, 5, 2293773, 0, 5, 2359309, 0, 5, 2424845, 0, 5, 2490381, 0, 5, 2555917, 65536, 5, 2621453, 131072, 0, 2621454, 131072, 0, 2555918, 0, 5, 2490382, 0, 5, 2424846, 0, 5, 2359310, 0, 5, 2293774, 0, 5, 2228238, 0, 5, 2162702, 65536, 5, 2097166, 0, 5, 2031630, 0, 5, 1966094, 0, 5, 1900558, 0, 5, 1835022, 0, 5, 1769486, 0, 5, 1703950, 0, 5, 1638414, 0, 5, 1572878, 0, 5, 1507342, 0, 5, 1507343, 0, 5, 1572879, 0, 5, 1638415, 0, 5, 1703951, 0, 5, 1769487, 0, 5, 1835023, 0, 5, 1900559, 0, 5, 1966095, 0, 5, 2031631, 0, 5, 2097167, 0, 5, 2162703, 0, 5, 2228239, 0, 5, 2293775, 0, 5, 2359311, 0, 5, 2424847, 0, 5, 2490383, 0, 5, 2555919, 0, 5, 2621455, 131072, 0, 2621456, 131072, 0, 2555920, 0, 5, 2490384, 0, 5, 2424848, 65536, 5, 2359312, 0, 5, 2293776, 0, 5, 2228240, 0, 5, 2162704, 0, 5, 2097168, 0, 5, 2031632, 0, 5, 1966096, 0, 5, 1900560, 0, 5, 1835024, 65536, 5, 1769488, 0, 5, 1703952, 0, 5, 1638416, 0, 5, 1572880, 0, 5, 1507344, 0, 5, 1507345, 0, 5, 1572881, 65536, 5, 1638417, 0, 5, 1703953, 0, 5, 1769489, 0, 5, 1835025, 0, 5, 1900561, 0, 5, 1966097, 0, 5, 2031633, 65536, 5, 2097169, 0, 5, 2162705, 0, 5, 2228241, 0, 5, 2293777, 0, 5, 2359313, 0, 5, 2424849, 0, 5, 2490385, 0, 5, 2555921, 0, 5, 2621457, 131072, 0, 2621458, 131072, 0, 2555922, 65536, 5, 2490386, 0, 5, 2424850, 0, 5, 2359314, 0, 5, 2293778, 0, 5, 2228242, 0, 5, 2162706, 0, 5, 2097170, 0, 5, 2031634, 0, 5, 1966098, 0, 5, 1900562, 0, 5, 1835026, 0, 5, 1769490, 0, 5, 1703954, 0, 5, 1638418, 0, 5, 1572882, 0, 5, 1507346, 0, 5, 1507347, 0, 5, 1572883, 0, 5, 1638419, 0, 5, 1703955, 0, 5, 1769491, 0, 5, 1835027, 0, 5, 1900563, 0, 5, 1966099, 0, 5, 2031635, 0, 5, 2097171, 0, 5, 2162707, 65536, 5, 2228243, 0, 5, 2293779, 0, 5, 2359315, 0, 5, 2424851, 0, 5, 2490387, 0, 5, 2555923, 0, 5, 2621459, 131072, 0, 2621460, 131072, 0, 2555924, 0, 5, 2490388, 0, 5, 2424852, 0, 5, 2359316, 0, 5, 2293780, 0, 5, 2228244, 0, 5, 2162708, 0, 5, 2097172, 0, 5, 2031636, 0, 5, 1966100, 0, 5, 1900564, 0, 5, 1835028, 0, 5, 1769492, 0, 5, 1703956, 0, 5, 1638420, 65536, 5, 1572884, 0, 5, 1507348, 0, 5, 1507349, 0, 5, 1572885, 0, 5, 1638421, 0, 5, 1703957, 0, 5, 1769493, 0, 5, 1835029, 65536, 5, 1900565, 0, 5, 1966101, 0, 5, 2031637, 0, 5, 2097173, 0, 5, 2162709, 0, 5, 2228245, 0, 5, 2293781, 0, 5, 2359317, 0, 5, 2424853, 0, 5, 2490389, 65536, 5, 2555925, 0, 5, 2621461, 131072, 0, 2621462, 131072, 0, 2555926, 0, 5, 2490390, 0, 5, 2424854, 0, 5, 2359318, 65536, 5, 2293782, 0, 5, 2228246, 0, 5, 2162710, 0, 5, 2097174, 0, 5, 2031638, 0, 5, 1966102, 0, 5, 1900566, 0, 5, 1835030, 0, 5, 1769494, 0, 5, 1703958, 0, 5, 1638422, 0, 5, 1572886, 0, 5, 1507350, 0, 5)

[node name="ClockTimer" type="Timer" parent="."]
autostart = true

[node name="StartingWordsTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Spawners" type="Node2D" parent="."]

[node name="ArrowSpawners" type="Node2D" parent="Spawners"]

[node name="ArrowSpawner" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 4
arrowSpeed = 200

[node name="ArrowSpawner2" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 6

[node name="ArrowSpawner3" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 8
arrowSpeed = 200

[node name="ArrowSpawner4" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 10

[node name="ArrowSpawner5" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 12
arrowSpeed = 200

[node name="ArrowSpawner6" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 14

[node name="ArrowSpawner7" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 16
arrowSpeed = 200

[node name="ArrowSpawner8" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 18

[node name="ArrowSpawner9" parent="Spawners/ArrowSpawners" instance=ExtResource("4_yghjq")]
rowsFromBottom = 20
arrowSpeed = 200

[node name="TigerSpawners" type="Node2D" parent="Spawners"]

[node name="TigerSpawner" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 5
tigerSpeed = 200

[node name="TigerSpawner2" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 7

[node name="TigerSpawner3" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 9
tigerSpeed = 200

[node name="TigerSpawner4" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 11

[node name="TigerSpawner5" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 13
tigerSpeed = 200

[node name="TigerSpawner6" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 15

[node name="TigerSpawner7" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 17
tigerSpeed = 200

[node name="TigerSpawner8" parent="Spawners/TigerSpawners" instance=ExtResource("5_sn32y")]
rowsFromBottom = 19

[node name="AlligatorSpawners" type="Node2D" parent="Spawners"]

[node name="AlligatorSpawner" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 24

[node name="AlligatorSpawner2" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 26
alligatorSpeed = 75

[node name="AlligatorSpawner3" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 28
alligatorSpeed = 75

[node name="AlligatorSpawner4" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 30
alligatorSpeed = 75

[node name="AlligatorSpawner5" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 32

[node name="AlligatorSpawner6" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 34
alligatorSpeed = 75

[node name="AlligatorSpawner7" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 36
alligatorSpeed = 75

[node name="AlligatorSpawner8" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 38

[node name="AlligatorSpawner9" parent="Spawners/AlligatorSpawners" instance=ExtResource("6_f0ye2")]
rowsFromBottom = 40
alligatorSpeed = 50

[node name="TurtlesSpawners" type="Node2D" parent="Spawners"]

[node name="TurtlesSpawner" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 25

[node name="TurtlesSpawner2" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 27
turtlesSpeed = 75

[node name="TurtlesSpawner3" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 29
turtlesSpeed = 50

[node name="TurtlesSpawner4" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 31
turtlesSpeed = 75

[node name="TurtlesSpawner5" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 33
turtlesSpeed = 75

[node name="TurtlesSpawner6" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 35

[node name="TurtlesSpawner7" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 37
turtlesSpeed = 50

[node name="TurtlesSpawner8" parent="Spawners/TurtlesSpawners" instance=ExtResource("6_306td")]
rowsFromBottom = 39
turtlesSpeed = 75

[node name="Player" parent="." instance=ExtResource("3_sqmxc")]

[node name="Chest" parent="." instance=ExtResource("8_rp243")]
position = Vector2(40, 664)

[node name="GemIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 16)
scale = Vector2(2, 2)
texture = ExtResource("9_fu3vc")

[node name="WaterArea" type="Area2D" parent="." groups=["waterArea"]]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
position = Vector2(192, 176)
shape = SubResource("RectangleShape2D_26pbq")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="TimerLabel" type="Label" parent="GUILayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 0
text = "00:00"
vertical_alignment = 1

[node name="GemsCollectedLabel" type="Label" parent="GUILayer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 5.0
offset_right = 143.0
offset_bottom = 32.0
text = "Gems Collected: -1"
vertical_alignment = 1

[node name="StartingWordsLabel" type="Label" parent="GUILayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Get Ready..."
horizontal_alignment = 1

[connection signal="timeout" from="ClockTimer" to="." method="_on_clock_timer_timeout"]
[connection signal="timeout" from="StartingWordsTimer" to="." method="_on_starting_words_timer_timeout"]
